--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "unity-editor-vrchat"]
 	path = unity-editor-vrchat
-	url = ssh://aur@aur.archlinux.org/unity-editor-vrchat.git
+	url = https://github.com/sksat/aur-unity-editor-vrchat.git
